--- a/src/style.less
+++ b/src/style.less
@@ -1,4 +1,9 @@
 #root {
   height: inherit;
   transition: transform .3s cubic-bezier(.78,.14,.15,.86);
+  background-color: #f8f8f8;
+}
+html,body{
+  padding: 0;
+  margin: 0;
 }
